--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,7 +3,7 @@ galaxy_info:
   author: Srdjan Vranac
   description: Ansilble role to setup mailcatcher (http://www.mailcatcher.me)
   company: Code4Hire Kft.
-  license: MIT
+  license: BSD
   min_ansible_version: 1.7
   platforms:
   - name: Ubuntu
